--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.267~aurex12.04.5) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+  * Removed ubuntu-desktop from aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Sun, 26 Aug 2012 11:27:26 +0200
+
 aurex-meta (1.267~aurex12.04.4) precise; urgency=low
 
   * Refreshed dependencies
