--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+aurex-meta (1.267~aurex12.04.6) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added alien to aurex-supported
+  * Added aurex-boot-theme to aurex-desktop
+  * Added aurex-default-settings to aurex-desktop
+  * Added aurex-gtk-theme to aurex-desktop
+  * Added aurex-icon-theme to aurex-desktop
+  * Added aurex-mdm-theme to aurex-desktop
+  * Added aurex-plymouth-theme to aurex-desktop
+  * Added aurex-ubiquity-theme to aurex-supported
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+  * Removed alien from aurex-desktop, aurex-standard
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Sun, 26 Aug 2012 17:29:55 +0200
+
 aurex-meta (1.267~aurex12.04.5) precise; urgency=low
 
   * Refreshed dependencies
