--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+aurex-meta (1.267~aurex12.04.8) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Aug 2012 01:42:12 +0200
+
+aurex-meta (1.267~aurex12.04.7) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Sun, 26 Aug 2012 22:19:40 +0200
+
 aurex-meta (1.267~aurex12.04.6) precise; urgency=low
 
   * Refreshed dependencies
