--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+aurex-meta (1.267~aurex12.04.10) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added oracle-java7-installer to aurex-supported
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+  * Removed oracle-java7-installer from aurex-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Aug 2012 17:25:09 +0200
+
+aurex-meta (1.267~aurex12.04.9) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added ambiance-colors-xfce-lxde to aurex-supported
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Aug 2012 17:19:58 +0200
+
 aurex-meta (1.267~aurex12.04.8) precise; urgency=low
 
   * Refreshed dependencies
