--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.11) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added dropbox to aurex-supported
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Aug 2012 19:51:43 +0200
+
 aurex-meta (1.267~aurex12.04.10) precise; urgency=low
 
   * Refreshed dependencies
