--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+aurex-meta (1.267~aurex12.04.12) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added nautilus-actions-extra to aurex-desktop-recommends, aurex-
+    supported
+  * Added nautilus-advanced-menu to aurex-desktop-recommends
+  * Added nautilus-execute to aurex-desktop-recommends
+  * Added nautilus-gedit to aurex-desktop-recommends
+  * Added nautilus-multimedia-menu to aurex-desktop-recommends
+  * Added nautilus-open-as-root to aurex-desktop-recommends
+  * Added nautilus-open-terminal-here to aurex-desktop-recommends
+  * Added nautilus-refresh to aurex-desktop-recommends
+  * Added nautilus-renamer to aurex-desktop-recommends
+  * Added nautilus-search to aurex-desktop-recommends
+  * Added nautilus-wallpaper-changer to aurex-desktop-recommends
+  * Added pdftk to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Aug 2012 22:59:53 +0200
+
 aurex-meta (1.267~aurex12.04.11) precise; urgency=low
 
   * Refreshed dependencies
