--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.21) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added virtualbox-4.2 to aurex-supported
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 13 Sep 2012 20:19:55 +0200
+
 aurex-meta (1.267~aurex12.04.20) precise; urgency=low
 
   * Refreshed dependencies
