--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.24) precise; urgency=low
+
+  * Refreshed dependencies
+  * New metapackage ausias-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 26 Sep 2012 09:29:21 +0200
+
 aurex-meta (1.267~aurex12.04.23) precise; urgency=low
 
   * Dummy upgrade to add pre-depends in vbox-bypass-redhat-release
