--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,245 @@
+aurex-meta (1.267~aurex12.04.26) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added acpi-support to ausias-desktop-recommends
+  * Added activity-log-manager-control-center to ausias-desktop-
+    recommends
+  * Added aisleriot to ausias-desktop-recommends
+  * Added alsa-base to ausias-desktop
+  * Added alsa-utils to ausias-desktop
+  * Added anacron to ausias-desktop
+  * Added app-install-data-partner to ausias-desktop-recommends
+  * Added apport-gtk to ausias-desktop-recommends
+  * Added arj to ausias-desktop
+  * Added at-spi2-core to ausias-desktop
+  * Added aurex-desktop to ausias-desktop
+  * Added aurex-transmute to ausias-desktop
+  * Added avahi-autoipd to ausias-desktop-recommends
+  * Added avahi-daemon to ausias-desktop-recommends
+  * Added axel to ausias-desktop
+  * Added baobab to ausias-desktop
+  * Added bc to ausias-desktop
+  * Added bluez to ausias-desktop-recommends
+  * Added bluez-alsa to ausias-desktop-recommends
+  * Added bluez-cups to ausias-desktop-recommends
+  * Added bluez-gstreamer to ausias-desktop-recommends
+  * Added branding-ubuntu to ausias-desktop-recommends
+  * Added brasero to ausias-desktop-recommends
+  * Added bridge-utils to ausias-desktop
+  * Added brltty to ausias-desktop-recommends
+  * Added ca-certificates to ausias-desktop
+  * Added cabextract to ausias-desktop-recommends
+  * Added checkbox-qt to ausias-desktop
+  * Added cmap-adobe-japan2 to ausias-desktop-recommends
+  * Added cups to ausias-desktop-recommends
+  * Added cups-bsd to ausias-desktop-recommends
+  * Added cups-client to ausias-desktop-recommends
+  * Added debconf-utils to ausias-desktop
+  * Added deja-dup to ausias-desktop-recommends
+  * Added dmsetup to ausias-desktop
+  * Added dmz-cursor-theme to ausias-desktop
+  * Added doc-base to ausias-desktop
+  * Added empathy to ausias-desktop-recommends
+  * Added eog to ausias-desktop
+  * Added ethtool to ausias-desktop
+  * Added evince to ausias-desktop
+  * Added example-content to ausias-desktop-recommends
+  * Added file-roller to ausias-desktop
+  * Added firefox to ausias-desktop-recommends
+  * Added firefox-gnome-support to ausias-desktop-recommends
+  * Added fonts-kacst-one to ausias-desktop-recommends
+  * Added fonts-khmeros-core to ausias-desktop-recommends
+  * Added fonts-lao to ausias-desktop-recommends
+  * Added fonts-liberation to ausias-desktop-recommends
+  * Added fonts-nanum to ausias-desktop-recommends
+  * Added fonts-takao-pgothic to ausias-desktop-recommends
+  * Added fonts-thai-tlwg to ausias-desktop-recommends
+  * Added foomatic-db-compressed-ppds to ausias-desktop
+  * Added foomatic-filters to ausias-desktop
+  * Added gcalctool to ausias-desktop
+  * Added gcc to ausias-desktop-recommends
+  * Added gedit to ausias-desktop
+  * Added genisoimage to ausias-desktop
+  * Added ghostscript-x to ausias-desktop
+  * Added ginn to ausias-desktop-recommends
+  * Added gnome-accessibility-themes to ausias-desktop-recommends
+  * Added gnome-bluetooth to ausias-desktop-recommends
+  * Added gnome-control-center to ausias-desktop
+  * Added gnome-disk-utility to ausias-desktop-recommends
+  * Added gnome-font-viewer to ausias-desktop
+  * Added gnome-media to ausias-desktop
+  * Added gnome-menus to ausias-desktop
+  * Added gnome-nettool to ausias-desktop
+  * Added gnome-orca to ausias-desktop-recommends
+  * Added gnome-power-manager to ausias-desktop
+  * Added gnome-screensaver to ausias-desktop-recommends
+  * Added gnome-screenshot to ausias-desktop
+  * Added gnome-session to ausias-desktop
+  * Added gnome-session-canberra to ausias-desktop
+  * Added gnome-sudoku to ausias-desktop-recommends
+  * Added gnome-system-log to ausias-desktop
+  * Added gnome-system-monitor to ausias-desktop
+  * Added gnome-terminal to ausias-desktop
+  * Added gnomine to ausias-desktop-recommends
+  * Added gstreamer0.10-alsa to ausias-desktop
+  * Added gstreamer0.10-plugins-base-apps to ausias-desktop
+  * Added gstreamer0.10-pulseaudio to ausias-desktop
+  * Added gucharmap to ausias-desktop
+  * Added gvfs-bin to ausias-desktop
+  * Added gvfs-fuse to ausias-desktop-recommends
+  * Added gwibber to ausias-desktop-recommends
+  * Added hplip to ausias-desktop-recommends
+  * Added ibus to ausias-desktop-recommends
+  * Added ibus-gtk3 to ausias-desktop-recommends
+  * Added ibus-pinyin to ausias-desktop-recommends
+  * Added ibus-pinyin-db-android to ausias-desktop-recommends
+  * Added ibus-table to ausias-desktop-recommends
+  * Added im-switch to ausias-desktop-recommends
+  * Added inputattach to ausias-desktop
+  * Added jockey-gtk to ausias-desktop-recommends
+  * Added kerneloops-daemon to ausias-desktop-recommends
+  * Added landscape-client-ui-install to ausias-desktop-recommends
+  * Added language-selector-gnome to ausias-desktop
+  * Added laptop-detect to ausias-desktop-recommends
+  * Added launchpad-integration to ausias-desktop
+  * Added lha to ausias-desktop
+  * Added libatk-adaptor to ausias-desktop
+  * Added libatk-adaptor-schemas to ausias-desktop
+  * Added libgail-common to ausias-desktop-recommends
+  * Added libgd2-xpm to ausias-desktop
+  * Added libnotify-bin to ausias-desktop
+  * Added libnss-mdns to ausias-desktop-recommends
+  * Added libpam-ck-connector to ausias-desktop
+  * Added libpam-gnome-keyring to ausias-desktop-recommends
+  * Added libproxy1-plugin-gsettings to ausias-desktop-recommends
+  * Added libproxy1-plugin-networkmanager to ausias-desktop-recommends
+  * Added libqt4-sql-sqlite to ausias-desktop-recommends
+  * Added libreoffice-calc to ausias-desktop-recommends
+  * Added libreoffice-gnome to ausias-desktop-recommends
+  * Added libreoffice-help-en-us to ausias-desktop-recommends
+  * Added libreoffice-impress to ausias-desktop-recommends
+  * Added libreoffice-math to ausias-desktop-recommends
+  * Added libreoffice-style-human to ausias-desktop-recommends
+  * Added libreoffice-writer to ausias-desktop-recommends
+  * Added libsasl2-modules to ausias-desktop
+  * Added libsdl1.2debian to ausias-desktop
+  * Added libwmf0.2-7-gtk to ausias-desktop-recommends
+  * Added libxp6 to ausias-desktop
+  * Added lightdm to ausias-desktop
+  * Added linux-headers-generic to ausias-desktop-recommends [amd64]
+  * Added linux-headers-generic-pae to ausias-desktop-recommends [i386]
+  * Added lvm2 to ausias-desktop
+  * Added mahjongg to ausias-desktop-recommends
+  * Added make to ausias-desktop-recommends
+  * Added mc to ausias-desktop
+  * Added mdadm to ausias-desktop
+  * Added mousetweaks to ausias-desktop-recommends
+  * Added mpack to ausias-desktop-recommends
+  * Added nautilus to ausias-desktop
+  * Added nautilus-sendto to ausias-desktop
+  * Added nautilus-share to ausias-desktop-recommends
+  * Added netcat to ausias-desktop
+  * Added network-manager-gnome to ausias-desktop-recommends
+  * Added network-manager-pptp to ausias-desktop-recommends
+  * Added network-manager-pptp-gnome to ausias-desktop-recommends
+  * Added nfs-common to ausias-desktop
+  * Added notify-osd to ausias-desktop
+  * Added nvidia-common to ausias-desktop
+  * Added onboard to ausias-desktop-recommends
+  * Added openprinting-ppds to ausias-desktop
+  * Added overlay-scrollbar to ausias-desktop-recommends
+  * Added p7zip-full to ausias-desktop-recommends
+  * Added p7zip-rar to ausias-desktop-recommends
+  * Added pcmciautils to ausias-desktop-recommends
+  * Added plymouth-theme-ubuntu-logo to ausias-desktop-recommends
+  * Added policykit-desktop-privileges to ausias-desktop-recommends
+  * Added printer-driver-c2esp to ausias-desktop-recommends
+  * Added printer-driver-foo2zjs to ausias-desktop-recommends
+  * Added printer-driver-min12xxw to ausias-desktop-recommends
+  * Added printer-driver-pnm2ppa to ausias-desktop
+  * Added printer-driver-ptouch to ausias-desktop-recommends
+  * Added printer-driver-pxljr to ausias-desktop-recommends
+  * Added printer-driver-sag-gdi to ausias-desktop-recommends
+  * Added printer-driver-splix to ausias-desktop-recommends
+  * Added pulseaudio to ausias-desktop
+  * Added pulseaudio-module-bluetooth to ausias-desktop-recommends
+  * Added pulseaudio-module-gconf to ausias-desktop-recommends
+  * Added pulseaudio-module-x11 to ausias-desktop-recommends
+  * Added python-aptdaemon.pkcompat to ausias-desktop-recommends
+  * Added qt-at-spi to ausias-desktop-recommends
+  * Added rar to ausias-desktop-recommends
+  * Added reiserfsprogs to ausias-desktop
+  * Added remmina to ausias-desktop-recommends
+  * Added rfkill to ausias-desktop
+  * Added rhythmbox to ausias-desktop-recommends
+  * Added rhythmbox-plugin-magnatune to ausias-desktop-recommends
+  * Added rhythmbox-ubuntuone to ausias-desktop-recommends
+  * Added rpm to ausias-desktop
+  * Added screen to ausias-desktop
+  * Added seahorse to ausias-desktop
+  * Added sharutils to ausias-desktop-recommends
+  * Added shotwell to ausias-desktop-recommends
+  * Added simple-scan to ausias-desktop-recommends
+  * Added smbclient to ausias-desktop
+  * Added smbfs to ausias-desktop
+  * Added sni-qt to ausias-desktop-recommends
+  * Added software-center to ausias-desktop
+  * Added software-properties-gtk to ausias-desktop
+  * Added speech-dispatcher to ausias-desktop-recommends
+  * Added squashfs-tools to ausias-desktop
+  * Added ssh-askpass-gnome to ausias-desktop
+  * Added sshfs to ausias-desktop
+  * Added system-config-printer-gnome to ausias-desktop
+  * Added telepathy-idle to ausias-desktop-recommends
+  * Added thunderbird to ausias-desktop-recommends
+  * Added thunderbird-gnome-support to ausias-desktop-recommends
+  * Added totem to ausias-desktop-recommends
+  * Added totem-mozilla to ausias-desktop-recommends
+  * Added transmission-gtk to ausias-desktop-recommends
+  * Added tree to ausias-desktop
+  * Added ttf-dejavu-core to ausias-desktop
+  * Added ttf-freefont to ausias-desktop
+  * Added ttf-indic-fonts-core to ausias-desktop-recommends
+  * Added ttf-punjabi-fonts to ausias-desktop-recommends
+  * Added ttf-ubuntu-font-family to ausias-desktop-recommends
+  * Added ttf-wqy-microhei to ausias-desktop-recommends
+  * Added ubuntu-artwork to ausias-desktop
+  * Added ubuntu-docs to ausias-desktop-recommends
+  * Added ubuntu-extras-keyring to ausias-desktop
+  * Added ubuntu-sounds to ausias-desktop
+  * Added ubuntuone-client-gnome to ausias-desktop-recommends
+  * Added ubuntuone-installer to ausias-desktop-recommends
+  * Added unace to ausias-desktop-recommends
+  * Added unity to ausias-desktop
+  * Added unity-2d to ausias-desktop
+  * Added unity-greeter to ausias-desktop
+  * Added unrar to ausias-desktop
+  * Added unzip to aurex-desktop
+  * Added update-manager to ausias-desktop
+  * Added update-notifier to ausias-desktop
+  * Added usb-creator-gtk to ausias-desktop-recommends
+  * Added uudeview to ausias-desktop-recommends
+  * Added vim to ausias-desktop
+  * Added vino to ausias-desktop-recommends
+  * Added whoopsie to ausias-desktop-recommends
+  * Added wireless-tools to ausias-desktop
+  * Added wpasupplicant to ausias-desktop
+  * Added xcursor-themes to ausias-desktop-recommends
+  * Added xdg-user-dirs to ausias-desktop
+  * Added xdg-user-dirs-gtk to ausias-desktop
+  * Added xdg-utils to ausias-desktop-recommends
+  * Added xdiagnose to ausias-desktop
+  * Added xfsprogs to ausias-desktop
+  * Added xkb-data to ausias-desktop
+  * Added xorg to ausias-desktop
+  * Added xterm to ausias-desktop
+  * Added xul-ext-ubufox to ausias-desktop-recommends
+  * Added yelp to ausias-desktop
+  * Added zenity to ausias-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 26 Sep 2012 22:36:48 +0200
+
 aurex-meta (1.267~aurex12.04.25) precise; urgency=low
 
   * Refreshed dependencies
