--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+aurex-meta (1.267~aurex12.04.28) precise; urgency=low
+
+  * Refreshed dependencies
+  * new packages: aurex-desktop-depinf, ausias-desktop-depinf
+  * Added libgoo-canvas-perl to aurex-desktop-depinf-recommends, aurex-
+    desktop-recommends, ausias-desktop-recommends
+  * Added shutter to aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, ausias-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 01 Oct 2012 22:30:46 +0200
+
 aurex-meta (1.267~aurex12.04.27) precise; urgency=low
 
   * Refreshed dependencies
