--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+aurex-meta (1.267~aurex12.04.29) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-desktop-depinf to ausias-desktop-depinf
+  * Added aurex-screenshot-settings to aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, ausias-desktop-recommends
+  * Added wireshark to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 01 Oct 2012 23:42:59 +0200
+
 aurex-meta (1.267~aurex12.04.28) precise; urgency=low
 
   * Refreshed dependencies
