--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.32) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added oracle-java8-installer to aurex-supported
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 30 Oct 2012 18:51:16 +0100
+
 aurex-meta (1.267~aurex12.04.31) precise; urgency=low
 
   * Refreshed dependencies
