--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.267~aurex12.04.34) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added ausias-papercut-client to ausias-classroom-student, ausias-
+    classroom-teacher
+  * Added ausias-printers-centro to ausias-classroom-student, ausias-
+    classroom-teacher
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Fri, 30 Nov 2012 10:43:48 +0100
+
 aurex-meta (1.267~aurex12.04.33) precise; urgency=low
 
   * Refreshed dependencies
