--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+aurex-meta (1.267~aurex12.04.35) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added cdrdao to aurex-standard
+  * New metapackage ausias-fatcli-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 05 Dec 2012 16:03:48 +0100
+
 aurex-meta (1.267~aurex12.04.34) precise; urgency=low
 
   * Refreshed dependencies
