--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.36) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-fatcli-mdm to aurex-fatcli, ausias-fatcli-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 05 Dec 2012 19:20:32 +0100
+
 aurex-meta (1.267~aurex12.04.35) precise; urgency=low
 
   * Refreshed dependencies
