--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aurex-meta (1.267~aurex12.04.39) precise; urgency=low
+
+  * Refreshed dependencies
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 14 Jan 2013 09:05:49 +0100
+
 aurex-meta (1.267~aurex12.04.38) precise; urgency=low
 
   * Refreshed dependencies
