--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.267~aurex12.04.45) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added oracle-java7-installer to aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, ausias-desktop-recommends, ausias-fatcli-
+    desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 15 Apr 2013 12:11:53 +0200
+
 aurex-meta (1.267~aurex12.04.44) precise; urgency=low
 
   * Dummy upgrade
