--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.267~aurex12.04.46) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-certificates to aurex-desktop-depinf-recommends, aurex-
+    desktop-recommends, ausias-desktop-recommends, ausias-fatcli-
+    desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 07 May 2013 08:31:01 +0200
+
 aurex-meta (1.267~aurex12.04.45) precise; urgency=low
 
   * Refreshed dependencies
