--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.47) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added libgarcon-1-0-dev to aurex-supported
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 08 Jul 2013 01:08:40 +0200
+
 aurex-meta (1.267~aurex12.04.46) precise; urgency=low
 
   * Refreshed dependencies
