--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aurex-meta (1.267~aurex12.04.48) precise; urgency=low
+
+  * Added sources for Potenza and Zoncolor themes
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 02 Sep 2013 09:06:14 +0200
+
 aurex-meta (1.267~aurex12.04.47) precise; urgency=low
 
   * Refreshed dependencies
