--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+aurex-meta (1.267~aurex12.04.53) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added linux-generic-lts-raring to aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, ausias-desktop-recommends, ausias-fatcli-
+    desktop-recommends
+  * Added linux-signed-generic-lts-raring to aurex-desktop-depinf-
+    recommends [amd64], aurex-desktop-recommends [amd64], ausias-
+    desktop-recommends [amd64], ausias-fatcli-desktop-recommends [amd64]
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Fri, 13 Sep 2013 14:54:35 +0200
+
 aurex-meta (1.267~aurex12.04.52) precise; urgency=low
 
   * Refreshed dependencies
