--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+aurex-meta (1.267~aurex12.04.54) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added bzr to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+  * Added git to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+  * Added git-svn to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+  * Removed linux-generic-lts-raring from aurex-desktop-depinf-
+    recommends, aurex-desktop-recommends, ausias-desktop-recommends,
+    ausias-fatcli-desktop-recommends
+  * Removed linux-signed-generic-lts-raring from aurex-desktop-depinf-
+    recommends [amd64], aurex-desktop-recommends [amd64], ausias-
+    desktop-recommends [amd64], ausias-fatcli-desktop-recommends [amd64]
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 24 Sep 2013 12:22:03 +0200
+
 aurex-meta (1.267~aurex12.04.53) precise; urgency=low
 
   * Refreshed dependencies
