--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+aurex-meta (1.267~aurex12.04.55) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added curl to aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, aurex-standard-recommends, ausias-desktop-recommends,
+    ausias-fatcli-desktop-recommends
+  * Added mysql-client to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+  * Moved axel to aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, aurex-standard-recommends, ausias-desktop-recommends,
+    ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 14 Oct 2013 08:48:37 +0200
+
 aurex-meta (1.267~aurex12.04.54) precise; urgency=low
 
   * Refreshed dependencies
