--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+aurex-meta (1.267~aurex12.04.57) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added virtualbox-4.3 to aurex-supported
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 09 Dec 2013 17:00:38 +0100
+
 aurex-meta (1.267~aurex12.04.56) precise; urgency=low
 
   * Refreshed dependencies
